--- a/styles/custom-styles.css
+++ b/styles/custom-styles.css
@@ -106,3 +106,11 @@ a.post-title {
 .right {
   float: right;
 }
+
+@media only screen and (max-width: 768px) {
+
+  .right {
+    float: none;
+  }
+
+}
