--- a/styles/custom-styles.css
+++ b/styles/custom-styles.css
@@ -1,116 +1,1 @@
-body {
-  background-color: #E8E8E8;
-  font-family: Lato, sans-serif;
-  font-size: 1em;
-  margin: 0px;
-  padding: 0px;
-}
-
-.ui.inverted.menu {
-  background-color: #008EAC;
-}
-
-.ui.menu .header.item {
-  background-color: #008EAC;
-  color: #FFFFFF;
-}
-
-.ui.menu .item > .custom-blue.label {
-  background-color: #FF7F50;
-}
-
-.ui.menu .item {
-  padding-left: 0.8em;
-  padding-right: 0.8em;
-}
-
-.ui.menu .item.icon {
-  padding-left: 0.6em;
-  padding-right: 0.6em;
-}
-
-.ui.stackable.menu .icon.item > .icon {
-  margin: 0px;
-}
-
-.post-content {
-  padding-bottom: 2.5%;
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-top: 2.5%;
-}
-
-.post-content p {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 0.8em;
-}
-
-.footer {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 0.7em;
-  padding-top: 1em;
-}
-
-.ui.label {
-  color: #FFFFFF;
-  background-color: #FF7F50;
-  font-weight: normal;
-}
-
-.ui.label a {
-  opacity: 1;
-  text-decoration: none;
-}
-
-.site-title a {
-  color: #FFFFFF;
-  font-size: 20px;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-.ui.segment.code {
-  background-color: #eee8d5;
-  overflow: auto;
-}
-
-.ui.segment.code code {
-  font-family: Menlo, Monaco, 'DejaVu Sans Mono', Consolas, 'Courier New', monospace;
-  font-size: 13px;
-}
-
-div.disqus-comments {
-  padding-top: 10px;
-}
-
-div.disqus-comments a {
-  font-size: 0.7em;
-}
-
-.main.container {
-  margin-top: 2em;
-}
-
-.ui.large.header {
-  color: #2E2E2E;
-}
-
-.ui.orange.label {
-  background-color: #FF7F50;
-}
-
-a.post-title {
-  text-decoration: none;
-}
-
-.right {
-  float: right;
-}
-
-@media only screen and (max-width: 768px) {
-
-  .right {
-    float: none;
-  }
-
-}
+body{background-color:#E8E8E8;font-family:Lato,sans-serif;font-size:1em;margin:0;padding:0}.ui.inverted.menu{background-color:#008EAC}.ui.menu .header.item{background-color:#008EAC;color:#FFF}.ui.menu .item>.custom-blue.label{background-color:coral}.ui.menu .item{padding-left:.8em;padding-right:.8em}.ui.menu .item.icon{padding-left:.6em;padding-right:.6em}.ui.stackable.menu .icon.item>.icon{margin:0}.post-content{padding:2.5% 5%}.post-content p{font-family:'Open Sans',sans-serif;font-size:.8em}.footer{font-family:'Open Sans',sans-serif;font-size:.7em;padding-top:1em}.ui.label{color:#FFF;background-color:coral;font-weight:400}.ui.label a{opacity:1;text-decoration:none}.site-title a{color:#FFF;font-size:20px;font-weight:700;text-decoration:none}.ui.segment.code{background-color:#eee8d5;overflow:auto}.ui.segment.code code{font-family:Menlo,Monaco,'DejaVu Sans Mono',Consolas,'Courier New',monospace;font-size:13px}div.disqus-comments{padding-top:10px}div.disqus-comments a{font-size:.7em}.main.container{margin-top:2em}.ui.large.header{color:#2E2E2E}.ui.orange.label{background-color:coral}a.post-title{text-decoration:none}.right{float:right}@media only screen and (max-width:768px){.right{float:none}}
