Add translations for the English and French versions of the site

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -103,6 +103,10 @@ footer p {
   font-size: 1rem;
 }
 
+div.date {
+  font-size: 1rem;
+}
+
 .card-content {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -125,6 +129,10 @@ article.card.post {
   }
 
   footer p {
+    font-size: 1.25rem;
+  }
+
+  div.date {
     font-size: 1.25rem;
   }
 
