Fix bottom margin of code elements

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -107,6 +107,7 @@ div.date {
   box-shadow: 0 1px 2px 0 rgba(34, 36, 38, 0.15);
   border-radius: 0.28571429rem;
   border: 1px solid rgba(34, 36, 38, 0.15);
+  margin-bottom: 1em;
 }
 
 .content pre {
