--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -130,7 +130,7 @@ code span {
   padding-left: 1.25rem;
 }
 
-article.card.post {
+article.card {
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -161,7 +161,7 @@ article.card.post {
     padding-left: 3rem;
   }
 
-  article.card.post {
+  article.card {
     margin-top: 30px;
     margin-bottom: 30px;
   }
