--- a/themes/marcandregoyette/layouts/index.html
+++ b/themes/marcandregoyette/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <main aria-role="main">
-  {{ range first 10 .Site.RegularPages }}
+  {{ range first 1 .Site.RegularPages }}
   <article class="card">
     <div class="card-content">
       <div class="date has-text-grey-dark has-text-right">
@@ -13,6 +13,7 @@
 
         {{ .Content }}
       </div>
+      {{- partial "listofarticles.html" . -}}
     </div>
   </article>
   {{ end }}
