Exclude static pages from list of articles

--- a/themes/marcandregoyette/layouts/_default/single.html
+++ b/themes/marcandregoyette/layouts/_default/single.html
@@ -12,9 +12,7 @@
 
         {{ .Content }}
       </div>
-      <div class="article-footer">
-        <p><a href="/fr/articles">Tous les articles</a></p>
-      </div>
+      {{- partial "listofarticles.html" . -}}
     </div>
   </article>
 </main>
