--- a/themes/marcandregoyette/layouts/_default/list.html
+++ b/themes/marcandregoyette/layouts/_default/list.html
@@ -4,11 +4,13 @@
     <div class="card-content">
       <h1 class="title is-family-secondary">{{ .Title}}</h1>
 
-      {{ range first 10 .Site.RegularPages }}
+      {{ range .Site.RegularPages }}
+      {{ if (not (eq .Params.article false)) }}
       <p>
         <span class="article-date has-text-grey-dark">{{ .Date.Format "2006-01-02" }}</span>
         <a href="{{ .RelPermalink }}">{{ .Title }}</a>
       </p>
+      {{ end }}
       {{ end }}
     </div>
   </article>
