--- a/themes/marcandregoyette/layouts/partials/listofarticles.html
+++ b/themes/marcandregoyette/layouts/partials/listofarticles.html
@@ -1,3 +1,4 @@
+{{ if (not (eq .Params.article false)) }}
 {{ if eq .Lang "fr" }}
 <div class="article-footer">
   <p><a href="/fr/articles">Liste de tous les articles</a></p>
@@ -6,4 +7,5 @@
 <div class="article-footer">
   <p><a href="/en/articles">List of all articles</a></p>
 </div>
+{{ end }}
 {{ end }}
