Fix aria-role and rss feeds

--- a/themes/marcandregoyette/layouts/index.html
+++ b/themes/marcandregoyette/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main aria-role="main">
+<main>
   {{ range first 1 .Site.RegularPages }}
   <article class="card">
     <div class="card-content">
