--- a/themes/marcandregoyette/layouts/404.html
+++ b/themes/marcandregoyette/layouts/404.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main aria-role="main">
+<main>
   <article class="card">
     <div class="card-content">
       <p>This page doesn't exists.</p>
