--- a/themes/marcandregoyette/layouts/_default/taxonomy.html
+++ b/themes/marcandregoyette/layouts/_default/taxonomy.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main aria-role="main">
+<main>
   <article class="card">
     <div class="card-content">
       <h1 class="title is-family-secondary">{{ .Title}}</h1>
