--- a/themes/marcandregoyette/layouts/partials/header.html
+++ b/themes/marcandregoyette/layouts/partials/header.html
@@ -7,7 +7,7 @@
       <div class="navbar-start">
         {{ if eq .Lang  "fr" }}
         <a href="/fr/articles" class="navbar-item is-tab">Articles</a>
-        <a href="/fr/tags" class="navbar-item is-tab">Tags</a>
+        <a href="/fr/fictions" class="navbar-item is-tab">Fictions</a>
         <a href="/fr/a-propos" class="navbar-item is-tab">À propos</a>
         {{ if .IsTranslated }}
         {{ range .Translations }}
@@ -18,7 +18,6 @@
         {{ end }}
         {{ else }}
         <a href="/en/articles" class="navbar-item is-tab">Articles</a>
-        <a href="/en/tags" class="navbar-item is-tab">Tags</a>
         <a href="/en/about" class="navbar-item is-tab">About</a>
         {{ if .IsTranslated }}
         {{ range .Translations }}
