--- a/themes/marcandregoyette/layouts/partials/footer.html
+++ b/themes/marcandregoyette/layouts/partials/footer.html
@@ -17,7 +17,7 @@
     <a href="https://github.com/magoyette/magoyette.github.io">Code source</a>
   </p>
   <p>
-    Le contenu de ce site est disponible selon les termes d&#x27;une
+    Les articles et le texte de ce site sont disponibles sous une
     <a
       rel="license"
       href="https://creativecommons.org/licenses/by-nd/4.0/deed.fr"
@@ -31,7 +31,7 @@
 </footer>
 {{ else }}
 <footer class="footer">
-  <p>Copyright © 2019-2020 Marc-André Goyette</p>
+  <p>Copyright © 2019-2021 Marc-André Goyette</p>
   <p>
     <a href="/en/articles">Articles</a> |
     <a href="/en/tags">Tags</a> |
@@ -43,11 +43,11 @@
     {{ else }}
     <a href="/fr">Français</a> |
     {{ end }}
-    <a href="/en/feeds/">Atom/RSS Feeds</a> |
+    <a href="/en/feeds/">Atom Feeds</a> |
     <a href="https://github.com/magoyette/magoyette.github.io">Source code</a>
   </p>
   <p>
-    The content of this site is licensed under a
+    Articles and the text of this site are licensed under a
     <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/"
       >Creative Commons License (CC BY-ND 4.0)</a
     >.
