--- a/themes/marcandregoyette/layouts/partials/footer.html
+++ b/themes/marcandregoyette/layouts/partials/footer.html
@@ -47,7 +47,7 @@
     <a href="https://github.com/magoyette/magoyette.github.io">Source code</a>
   </p>
   <p>
-    Articles and the text of this site are licensed under a
+    The articles and the text of this site are licensed under a
     <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/"
       >Creative Commons License (CC BY-ND 4.0)</a
     >.
