--- a/themes/marcandregoyette/layouts/partials/head.html
+++ b/themes/marcandregoyette/layouts/partials/head.html
@@ -9,7 +9,9 @@
     name="description"
     content="Essais de Marc-André Goyette sur le développement logiciel, la fiction interactive et la littérature."
   />
-  <link type="text/css" rel="stylesheet" href="/styles.css" />
+  {{ $options := (dict "targetPath" "styles.css" "outputStyle" "compressed" "includePaths" (slice "node_modules")) }}
+  {{ $style := resources.Get "sass/styles.scss" | resources.ToCSS $options }}
+  <link type="text/css" rel="stylesheet" href="{{ $style.RelPermalink }}">
   {{ if eq .Lang  "fr" }}
   <link rel="alternate" type="application/atom+xml" href="/fr/atom.xml" title="Flux Atom">
   {{ else }}
